--- a/easyeditor/platform/msvc2008/projects/libmath.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libmath.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\include\ee;..\..\..\..\sm\src\sm;&quot;..\..\..\..\editor-external\clipper&quot;;&quot;..\..\..\..\editor-external\triangle\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\include\ee;..\..\..\..\sm\src\sm;&quot;..\..\..\..\editor-external\clipper&quot;;&quot;..\..\..\..\editor-external\triangle\include&quot;;..\..\..\..\editor-external\c99"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;EASY_EDITOR"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -108,7 +108,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="0"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\include\ee;..\..\..\..\sm\src\sm;&quot;..\..\..\..\editor-external\clipper&quot;;&quot;..\..\..\..\editor-external\triangle\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\include\ee;..\..\..\..\sm\src\sm;&quot;..\..\..\..\editor-external\clipper&quot;;&quot;..\..\..\..\editor-external\triangle\include&quot;;..\..\..\..\editor-external\c99"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;EASY_EDITOR"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
