--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "shaderlab"]
 	path = shaderlab
 	url = ssh://git@tea.ejoy.com:3222/LR/ShaderLab.git
+[submodule "tasks/src/tasks"]
+	path = tasks/src/tasks
+	url = ssh://git@tea.ejoy.com:3222/LR/tasks.git
