[ADDED] pimg as submodule
Former-commit-id: c59f7ce4246f3f6c906a247773dc339d47c08660

--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "tasks/src/tasks"]
 	path = tasks/src/tasks
 	url = ssh://git@tea.ejoy.com:3222/LR/tasks.git
+[submodule "pimg"]
+	path = pimg
+	url = ssh://git@tea.ejoy.com:3222/LR/pimg.git
