--- a/.gitmodules
+++ b/.gitmodules
@@ -16,9 +16,6 @@
 [submodule "ds/src/ds"]
 	path = ds/src/ds
 	url = ssh://git@tea.ejoy.com:3222/LR/ds.git
-[submodule "model3/src/model3"]
-	path = model3/src/model3
-	url = ssh://git@tea.ejoy.com:3222/LR/model3.git
 [submodule "sm/src/sm"]
 	path = sm/src/sm
 	url = ssh://git@tea.ejoy.com:3222/LR/sm.git
@@ -76,3 +73,6 @@
 [submodule "pimg"]
 	path = pimg
 	url = ssh://git@tea.ejoy.com:3222/LR/pimg.git
+[submodule "model3"]
+	path = model3
+	url = ssh://git@tea.ejoy.com:3222/LR/model3.git
