--- a/easy3d/platform/msvc2008/projects/easy3d.vcproj
+++ b/easy3d/platform/msvc2008/projects/easy3d.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\..\editor-external\assimp\include;..\..\..\..\easyeditor\include;..\..\..\..\editor-external\wx\include;..\..\..\..\editor-external\json\include;..\..\..\..\editor-external\freetype\include;..\..\..\..\editor-external\c99;..\..\..\..\editor-external\lua\include;..\..\..\..\editor-external\gl\include"
+				AdditionalIncludeDirectories="..\..\..\..\editor-external\assimp\include;..\..\..\..\easyeditor\include;..\..\..\..\editor-external\json\include;..\..\..\..\editor-external\c99;..\..\..\..\sm\src\sm;..\..\..\..\sprite2\include;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;EASY_EDITOR"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -105,7 +105,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\..\editor-external\assimp\include;..\..\..\..\easyeditor\include;..\..\..\..\editor-external\wx\include;..\..\..\..\editor-external\json\include;..\..\..\..\editor-external\freetype\include;..\..\..\..\editor-external\c99;..\..\..\..\editor-external\lua\include;..\..\..\..\editor-external\gl\include"
+				AdditionalIncludeDirectories="..\..\..\..\editor-external\assimp\include;..\..\..\..\easyeditor\include;..\..\..\..\editor-external\json\include;..\..\..\..\editor-external\c99;..\..\..\..\sm\src\sm;..\..\..\..\sprite2\include;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;EASY_EDITOR"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
