[ADDED] reload all symbols
Former-commit-id: bf2418c6b206d787f6ef7d75d0e9a36bb33623c2

--- a/easyeditor/platform/msvc2008/projects/libdata.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libdata.vcproj
@@ -205,6 +205,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\include\ee\ReloadSymVisitor.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\include\ee\Visitor.h"
 					>
 				</File>
