--- a/sm/platform/msvc2008/projects/sm.vcproj
+++ b/sm/platform/msvc2008/projects/sm.vcproj
@@ -217,6 +217,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\sm\SM_Math.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\sm\SM_Math.inl"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\sm\SM_Process.h"
 				>
 			</File>
