[CHANGED] move cfg pre_mul_alpha to gum
Former-commit-id: b6e8bb272f59b01ff6b54bd098038d26e1949745

--- a/sm/platform/msvc2008/projects/sm.vcproj
+++ b/sm/platform/msvc2008/projects/sm.vcproj
@@ -249,6 +249,10 @@
 			Name="utility"
 			>
 			<File
+				RelativePath="..\..\..\src\sm\external\sm_config.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\sm\sm_const.h"
 				>
 			</File>
