--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "model3"]
 	path = model3
 	url = ssh://git@github.com:xzrunner/model3.git
+[submodule "polymesh"]
+	path = polymesh
+	url = ssh://git@tea.ejoy.com:3222/LR/polymesh.git
