[ADDED] LR packer new
Former-commit-id: 437f18cfcd259742494d7bf643ad9931a83c9dfd

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -690,6 +690,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\easydb_cl\GenPackCfg.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\GenPackCfg.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\easydb_cl\RemoveDuplicateSprite.cpp"
 					>
 				</File>
@@ -835,6 +843,14 @@
 				</File>
 				<File
 					RelativePath="..\..\..\src\easydb_cl\LRPacker.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\LRPackerNew.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\LRPackerNew.h"
 					>
 				</File>
 				<Filter
