[ADDED] pack res id
Former-commit-id: 74f74afd02186e40e83a8f100fa9df89542119a2

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -405,6 +405,14 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\src\easydb_cl\PackResID.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\PackResID.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\easydb_cl\UnpackLuaDescFile.cpp"
 						>
 					</File>
