[ADDED] pack anchor node
Former-commit-id: 709379886e781a7071258f7cc4936f1af4c39779

--- a/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
+++ b/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
@@ -480,6 +480,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="00.anchor"
+				>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\PackAnchor.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\PackAnchor.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="tools"
