[FIXED] pack for complex and anim spr
Former-commit-id: c126faea6468366097af0a31557254147c6f91b5

--- a/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
+++ b/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
@@ -529,6 +529,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\libsprpacker\SprWithTransBuilder.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libsprpacker\SprWithTransBuilder.inl"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libsprpacker\SymBuilder.h"
 				>
 			</File>
