[FIXED] pack sprite node with trans
Former-commit-id: b9ad9d32b9672be2bea8c575e201dc34ee9c17d4

--- a/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
+++ b/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
@@ -529,6 +529,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\libsprpacker\SprBuilder2.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libsprpacker\SprBuilder2.inl"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libsprpacker\SprWithTransBuilder.h"
 				>
 			</File>
