[ADDED] CurrSprTreePath for actor
Former-commit-id: 160fd7692a81c9d852623aa5b74c9d28300c9013

--- a/easyeditor/platform/msvc2008/projects/libdata.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libdata.vcproj
@@ -278,6 +278,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\source\data\config\CurrSprTreePath.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\CurrSprTreePath.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\include\ee\dev_config.h"
 				>
 			</File>
