[ADDED] pack_id_dir to config
Former-commit-id: a177ff249c4bbc9c3f126189ab6b237ed6e3f7b8

--- a/easycomplex/assets/config.json
+++ b/easycomplex/assets/config.json
@@ -85,9 +85,12 @@
 	// ],
 
 
+	// id
+	"pack_id_dir" : "D:\\projects\\lr\\lr_rawres\\id",
+
 
 	// render
 
-	"use_dtex" : true
+	"debug_draw" : false
 
 }
