[ADDED] edit msg
Former-commit-id: a05fec8de805ff9254b50303c07b990a5dec488e

--- a/easyeditor/platform/msvc2008/projects/libedit.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libedit.vcproj
@@ -746,6 +746,26 @@
 				</File>
 			</Filter>
 		</Filter>
+		<Filter
+			Name="msg"
+			>
+			<File
+				RelativePath="..\..\..\source\edit\msg\EditSprMsg.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\EditSprMsg.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\source\edit\op\MsgHelper.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\MsgHelper.h"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
