--- a/easyeditor/platform/msvc2008/projects/libtool.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libtool.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\include\ee;..\..\..\..\sprite2\include;..\..\..\..\gum\include;..\..\..\..\sm\src\sm;..\..\..\..\cu\src\cu;&quot;..\..\..\..\editor-external\stackwalker&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\libjpeg\include&quot;;&quot;..\..\..\..\editor-external\libpng\include&quot;;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\include\ee;..\..\..\..\simp\include;..\..\..\..\sprite2\include;..\..\..\..\gum\include;..\..\..\..\sm\src\sm;..\..\..\..\cu\src\cu;&quot;..\..\..\..\editor-external\stackwalker&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\libjpeg\include&quot;;&quot;..\..\..\..\editor-external\libpng\include&quot;;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;EASY_EDITOR"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -108,7 +108,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="0"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\include\ee;..\..\..\..\sprite2\include;..\..\..\..\gum\include;..\..\..\..\sm\src\sm;..\..\..\..\cu\src\cu;&quot;..\..\..\..\editor-external\stackwalker&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\libjpeg\include&quot;;&quot;..\..\..\..\editor-external\libpng\include&quot;;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\include\ee;..\..\..\..\simp\include;..\..\..\..\sprite2\include;..\..\..\..\gum\include;..\..\..\..\sm\src\sm;..\..\..\..\cu\src\cu;&quot;..\..\..\..\editor-external\stackwalker&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\libjpeg\include&quot;;&quot;..\..\..\..\editor-external\libpng\include&quot;;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;EASY_EDITOR"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -207,6 +207,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\source\tool\EditedFileStack.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\include\ee\EditedFileStack.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\source\tool\Exception.cpp"
 			>
 		</File>
@@ -239,11 +247,27 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\source\tool\PackIDMgr.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\include\ee\PackIDMgr.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\source\tool\PlayControl.cpp"
 			>
 		</File>
 		<File
 			RelativePath="..\..\..\include\ee\PlayControl.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\source\tool\Socket.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\include\ee\Socket.h"
 			>
 		</File>
 		<File
